<resources>
    <string name="app_name">COMElicioso</string>
    <!--Textos de registro-->
    <string name="registro_texto_nombre">Nombre</string>
    <string name="registro_texto_email">Email</string>
    <string name="registro_texto_password">Contraseña</string>
    <string name="registro_hint_nombre">Escribe tu nombre completo</string>
    <string name="registro_hint_email">Escribe tu correo electrónico</string>
    <string name="registro_hint_password">Escribe una contraseña</string>
    <string name="registro_button_registrar">Registrar</string>
    <string name="registro_texto_Cuenta">¿Ya tienes cuenta?</string>
    <string name="registro_texto_Inicia">Inicia sesión</string>

    <!--Textos de login-->
    <string name="login_hint_email">Correo electrónico</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_texto_registrar">Registrarme</string>
    <string name="login_texto_Cuenta">¿No tienes cuenta?</string>
    <string name="login_button_Inicia">Iniciar sesión</string>
    <string name="login_texto_Olvide">Olvidé mi contraseña</string>

    <!--Textos de recuperar contraseña-->
    <string name="recupera_texto_Recupera">Recupera tu contraseña</string>
    <string name="recupera_texto_Iniciar">Iniciar sesión</string>
    <string name="recupera_button_Enviar">Enviar</string>

    <!--Textos para dialog_formulario_evaluacion-->
    <string name="der_titulo">Evaluación del restaurante</string>
    <string name="der_opinion">¿Cuál fue tu experiencia?</string>
    <string name="der_edt_opinion">Cuéntanos tu experiencia</string>
    <string name="der_fotos">¿Deseas agregar una foto?</string>
    <string name="der_btn_fotos">Elegir foto</string>
    <string name="der_gasto">¿Cuánto gastaste?</string>
    <string name="der_edt_gasto">ej. 300</string>
    <string name="der_personas">¿Cuántas personas eran?</string>
    <string name="der_personas_">Personas</string>
    <string name="der_edt_tiempo">ej. 30 </string>
    <array name="der_spn_personas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </array>
    <string name="der_tiempo_espera">¿Cuál fue tu tiempo de espera aproximado (minutos)?</string>

    <!--Textos para Feed-->
    <string name="ffe_feed">Recomendaciones</string>

    <!--Item menu overflow strings-->
    <string name="menu_over_cerrar">Cerrar Sesion</string>
    <string name="menu_over_acerca">Acerca de</string>

    <!--TABS strings-->
    <string name="menu_feed">Feed</string>
    <string name="menu_restaurantes">Restaurantes disponibles</string>
    <string name="menu_agenda">Agenda del usuario</string>
    <string name="menu_listas">Lista de favoritos y proximos</string>
    <string name="menu_listas_favorito">Favoritos</string>
    <string name="menu_listas_proximos">Proximos a visitar</string>

    <!--Textos de publicaciones-->
    <string name="cardview_descripcion_imagen_publicacion">Publicación de restaurante</string>
    <string name="cardview_descripcion_texto_publicacion"><b>@usuario</b>\nTexto de publicaciones</string>
    <string name="sin_publicaciones">No hay publicaciones hechas hasta el momento.</string>

    <!--Textos de mis reservaciones-->
    <string name="cardview_descripcion_restaurante">Nombre del restaurante</string>
    <string name="cardview_descripcion_fecha">DD-MM-YYYY</string>
    <string name="cardview_descripcion_hora">00:00</string>
    <string name="cardview_descripcion_asistentes">Numero de asistentes:</string>
    <string name="cardview_descripcion_imagen">Realizar evaluación</string>

    <!--Reservaciones strings-->
    <string name="mis_recervaciones_texto">Mis reservaciones</string>
    <string name="nuevas_recervaciones_texto">Hacer nueva reservación</string>
    <string name="sin_reservaciones">No has hecho reservaciones.</string>
    <string name="sin_restaurantes">No hay restaurantes registrados hasta el momento.</string>
    <string name="sin_favoritos">No has agregado ningun restaurante a favoritos.</string>
    <string name="sin_proximos">No has agregado ningun restaurante a proximos por visitar.</string>

    <!--Lista de restaurantes strings-->
    <string name="texto_restaurante">Un restaurante</string>
    <string name="texto_tipo_comida">Tipo de comida</string>
    <string name="texto_imagen_restaurante">Logo del restaurante</string>
    <string name="texto_imagen_fav">Agregar a restaurantes favoritos</string>
    <string name="texto_imagen_save">Agregar a restaurantes por visitar</string>

    <!--Textos para dialog_detalles_restaurantes-->
    <string name="ddr_calificacion">Calificacion:</string>
    <string name="ddr_icon_restaurante">Icono del restaurante</string>
    <string name="ddr_icon_telefono">Icono del telefono</string>
    <string name="ddr_icon_horarios">Icono de horarios</string>
    <string name="ddr_icon_ubicacion">Icono de ubicacion</string>
    <string name="ddr_icon_gasto_aproximado">Icono de gastos aproximados</string>
    <string name="ddr_nombre_restaurante">Restaurante</string>
    <string name="ddr_tipo_comida">Tipo de comida</string>
    <string name="ddr_horarios">Horarios</string>
    <string name="ddr_telefono">33333333</string>
    <string name="ddr_costo_aproximado">Cantidad aproximada</string>
    <string name="ddr_ubicacion">Ubicacion</string>

    <!--Textos para dialog_formulario_reservacion-->
    <string name="dfr_titulo">Reservación</string>
    <string name="dfr_nombre_reservado_por">Nombre de quien reserva</string>
    <string name="dfr_reservado_por">Reservación hecha por:</string>
    <string name="dfr_numero_asistentes">Numero de lugares a reservar</string>
    <string name="dfr_fecha_reservacion">Fecha:</string>
    <string name="dfr_hora_reservacion">Hora:</string>
    <string name="dfr_restaurantes_para_reservar">Restaurantes a reservar:</string>

    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>

    <!--Programadores-->
    <string name="Mireya">Ivette Mireya Peña Zuñiga</string>
    <string name="Cesar">Cesar Alejandro Escalante Delgado</string>
</resources>