<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DER_contenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FF9800">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/DER_txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/der_titulo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/DER_divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/bajito" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/DER_txtOpinion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/der_opinion" />

                <EditText
                    android:id="@+id/DER_edtOpinion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/der_edt_opinion"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />

                <TextView
                    android:id="@+id/DER_txtFoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/der_fotos" />

                <ImageView
                    android:id="@+id/DER_imgVFoto"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    app:srcCompat="@drawable/ic_baseline_burst_mode_24" />

                <Button
                    android:id="@+id/DER_btnFoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FF9800"
                    android:text="@string/der_btn_fotos" />

                <TextView
                    android:id="@+id/DER_txtGasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/der_gasto" />

                <EditText
                    android:id="@+id/DER_edtGasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/der_edt_gasto"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/DER_txtPersonas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/der_personas" />

                <Spinner
                    android:id="@+id/DER_spinPersonas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/der_personas_"
                    android:minHeight="48dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/DER_txtTiempo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/der_tiempo_espera" />

                <EditText
                    android:id="@+id/DER_edtTiempo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/der_edt_gasto"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    tools:ignore="LabelFor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/DFR_btnCancelar"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/btn_cancelar" />

                    <Button
                        android:id="@+id/DFR_btnAceptar"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/btn_aceptar" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>